@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-01-11T08:00:52Z",
-  "count_outdated" : 64,
-  "uniques_outdated" : 48,
+  "timestamp" : "2024-01-13T08:00:37Z",
+  "count_outdated" : 66,
+  "uniques_outdated" : 49,
   "count" : 72,
   "uniques" : 55,
   "clones" : [
-    {
-      "timestamp": "2023-12-30T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-01-04T00:00:00Z",
       "count": 1,
