@@ -1,12 +1,7 @@
 {
-  "count": 8,
-  "uniques": 7,
+  "count": 6,
+  "uniques": 6,
   "clones": [
-    {
-      "timestamp": "2023-12-30T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-01-04T00:00:00Z",
       "count": 1,
